<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bground"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:layout_centerHorizontal="true">

        <com.google.ads.AdView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            ads:adSize="BANNER"
            ads:adUnitId="a14fa652705f63b"
            ads:loadAdOnCreate="true" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageButton
                android:contentDescription="@string/upButton1"
                android:id="@+id/upButton1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/up" />
            <EditText
                android:id="@+id/eText1"
                android:hint="@string/month"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:inputType="date" >
                <requestFocus />
            </EditText>
            <ImageButton
                android:contentDescription="@string/downButton1"
                android:id="@+id/downButton1"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:src="@drawable/down" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageButton
                android:contentDescription="@string/upButton2"
                android:id="@+id/upButton2"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:src="@drawable/updark" />
            <EditText
                android:id="@+id/eText2"
                android:hint="@string/day"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:inputType="date" />
            <ImageButton
                android:contentDescription="@string/downButton2"
                android:id="@+id/downButton2"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:src="@drawable/down" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageButton
                android:contentDescription="@string/upButton3"
                android:id="@+id/upButton3"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:src="@drawable/updark" />
            <EditText
                android:id="@+id/eText3"
                android:layout_width="105dp"
                android:hint="@string/year"
                android:layout_height="wrap_content"
                android:inputType="date" />
            <ImageButton
                android:contentDescription="@string/downButton3"
                android:id="@+id/downButton3"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:src="@drawable/down" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/upButton4"
                android:src="@drawable/picture" />
        </LinearLayout>
        
        
    </LinearLayout>
    

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    
        <Button
            android:id="@+id/startButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/go" />

    </RelativeLayout>
   
</LinearLayout>